@@ -32,6 +32,7 @@ Added support for `static`, `_Noreturn`, and `inline` qualifiers for globals
 Added support for `static` variables in functions
 Added support for implicit return with value 0 from main
 Added support for multi token integer types (`unsigned int`, `long long`, `long long int`, etc.)
+Added support arrays on the stack
 
 * 1.11 - 2023-11-01
 ** Added
